[package]
name = "ass-font-changer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "assfix"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
aspasia = { git = "https://github.com/istudyatuni/aspasia", rev = "1324234a27482a73ebcaee0ffc3823e38e66d0f5" }
clap = { version = "4.5.27", features = ["derive"] }
glob = "0.3.2"
